added new examples ie 2

--- a/examples/2 Elastix Parameters.ipynb
+++ b/examples/2 Elastix Parameters.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "84dd1e98-60f5-4360-bd69-3a6775fc2950",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
        "Text(0, 0.5, 'Mutual Informatiton')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "2f8d7450-1675-4783-80a6-067e0538b6b2",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "4a5b1b68-4387-459b-918c-4825db0c8c41",
    "metadata": {},
    "outputs": [
@@ -151,16 +151,91 @@
    "id": "db1f65ab-c793-4c30-ba0a-b5c9290a5bfa",
    "metadata": {},
    "source": [
-    "Each of these are important in their own right, the defaults work decently well, but sometimes you might want to change the `MaximumNumberOfIterations` to something smaller like 250 if you know that the registration problem is easily solvable, or other times you might want to use only a single resolution registration scheme. It is up to you how you want to configure your registration scheme."
+    "Each of these are important in their own right, the defaults work decently well, but sometimes you might want to change the `MaximumNumberOfIterations` to something smaller like 250 if you know that the registration problem is easily solvable, or other times you might want to use only a single resolution registration scheme. It is up to you how you want to configure your registration scheme.\n",
+    "\n",
+    "\n",
+    "`align.buildSitkTile()` will specify load the default parameters and build your elastix object for you automatically. You can also change parameters not present in the ddefaults, like how \"agressive\" of an optimization you want implement by modifying `MaximumStepLength`, or automatically modifying the number of resolutions without explicitly specifying the pyramid scheme. "
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d5d607fe-d4e1-490c-8dca-9dd053147dfc",
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "976bc052-aecd-4558-9567-807731b91248",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('AutomaticParameterEstimation', ('true',)), ('AutomaticScalesEstimation', ('true',)), ('CheckNumberOfSamples', ('true',)), ('DefaultPixelValue', ('0.0',)), ('FinalBSplineInterpolationOrder', ('1',)), ('FixedImagePyramid', ('FixedSmoothingImagePyramid',)), ('ImageSampler', ('RandomCoordinate',)), ('Interpolator', ('LinearInterpolator',)), ('MaximumNumberOfIterations', ('2000',)), ('MaximumNumberOfSamplingAttempts', ('100',)), ('MaximumStepLength', ('5',)), ('Metric', ('AdvancedMattesMutualInformation',)), ('MovingImagePyramid', ('MovingSmoothingImagePyramid',)), ('NewSamplesEveryIteration', ('true',)), ('NumberOfResolutions', ('1',)), ('NumberOfSamplesForExactGradient', ('100000',)), ('NumberOfSpatialSamples', ('2048',)), ('Optimizer', ('AdaptiveStochasticGradientDescent',)), ('Registration', ('MultiResolutionRegistration',)), ('ResampleInterpolator', ('FinalBSplineInterpolator',)), ('Resampler', ('DefaultResampler',)), ('ResultImageFormat', ('nii',)), ('Transform', ('EulerTransform',)), ('WriteIterationInfo', ('false',)), ('WriteResultImage', ('true',))]\n"
+     ]
+    }
+   ],
    "source": [
-    "There are also a number of parameters related to "
+    "# set align's pmap and resolution\n",
+    "align.buildSitkTile()\n",
+    "# note using createParameterMap only allows you to modify certain parameters based on defaults\n",
+    "# if you want to modify params not included in those defaults you can use the method below\n",
+    "align.elastix.SetParameter('MaximumStepLength', '5')\n",
+    "align.elastix.SetParameter('NumberOfResolutions', '1')\n",
+    "\n",
+    "\n",
+    "pmap_new = align.elastix.GetParameterMap()\n",
+    "print(pmap_new[0].items())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "339e5060-144f-46de-a070-6a4ae8711258",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from exm.io.io import nd2ToVol\n",
+    "#defrost to add vol paths and fov\n",
+    "cfg.defrost()\n",
+    "\n",
+    "cfg.DATASET.VOL_FIX_PATH = '/mp/nas2/ruihan/20220512/20220512_Code3/Channel405 SD_Seq0004.nd2'\n",
+    "cfg.DATASET.VOL_MOVE_PATH = '/mp/nas2/ruihan/20220512/20220512_Code5/Channel405 SD_Seq0004.nd2'\n",
+    "cfg.DATASET.FOV = 23\n",
+    "#change num of iterations in elastix to 250 for speed\n",
+    "cfg.ALIGN.MaximumNumberOfIterations = '250'\n",
+    "\n",
+    "cfg.freeze()\n",
+    "\n",
+    "fix_vol, mov_vol = nd2ToVol(cfg.DATASET.VOL_FIX_PATH, cfg.DATASET.FOV),nd2ToVol(cfg.DATASET.VOL_MOVE_PATH, cfg.DATASET.FOV)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21dd34ae-caea-4910-843d-199806b202e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# not we are not using runner class here, just align\n",
+    "tform = align.computeTransformMap(fix_vol, mov_vol)\n",
+    "result = align.warpVolume(mov_vol,tform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdeca2ca-c2cb-4b1a-95f0-a92561dd024e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from exm.io.io import saveGif\n",
+    "saveGif(fix_vol[50,:,:], result[50,:,:], 'tmp.gif')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c29efbab-90e2-4f3c-ae4a-907fbb752c45",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
